# Google-Maps-API-Route-Map

./: .firebaserc  .gitignore  README.md  firebase.json
Backend/app/services/: distance_matrix.py  google_api.py
Diagramas/: Diagrama de flujo del Cliente Map Router.drawio
Frontend/: .env.example  package-lock.json  package.json
Frontend/src/: App.css  App.tsx  index.css
Frontend/src/components/: Login.jsx  Login.tsx  MapCanvas.tsx  PlaceRow.tsx
Frontend/src/hooks/: useGoogleMaps.ts
Frontend/src/pages/: RouteOptimizerPage.tsx
Frontend/src/services/: .env.example  cloudFunction.js  cloudFunction.ts  firebase.js  firebase.ts  googleMaps.ts  routeAPI.ts
Frontend/src/types/: route.tsx
Frontend/src/utils/: format.ts  geo.ts  ids.ts
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: cache.sqlite3  config.py  main.py  models.py  utils.py
backend/app/middleware/: auth.py
backend/app/optimizer/: optimizer.py
backend/app/services/: cache.py  distance_matrix.py  google_api.py
frontend/: .env.example  .gitignore  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
