[project]
name = "backend"
version = "0.1.0"
description = "Route optimizer Cloud Function – genetic algorithm over Google Maps Distance Matrix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.5.0",
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "firebase-admin>=7.4.0",
    "python-dotenv>=1.0.0",
]
